Salesforce Assignment/Assignment_1/src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>TODAY() - DOB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Married__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Married</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spouse_Name__c</fullName>
        <label>Spouse Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Class__c</columns>
        <columns>DOB__c</columns>
        <columns>email__c</columns>
        <columns>First_Name__c</columns>
        <columns>LastName__c</columns>
        <columns>Married__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>